# arxiv-digest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/core/: fetcher.py  filter.py  formatter.py  pipeline.py
app/providers/llm/: base.py  groq.py  pricing.py  prompts.py
app/providers/notification/: base.py  line.py
app/storage/: base.py  factory.py  firestore.py  memory.py  models.py
app/utils/: exceptions.py  logger.py  retry.py
config/: llm_pricing.yaml  settings.yaml
docs/: design.md  requirements.md  tasks.md
tests/: test_config.py  test_fetcher.py  test_filter.py  test_formatter.py  test_groq.py  test_healthz.py  test_line.py  test_logger.py  test_pipeline.py  test_retry.py  test_storage.py
