[project]
name = "arxiv-digest"
version = "0.1.0"
description = "arXiv の AI 関連論文から興味度の高いものを選び日本語要約を LINE に配信するサービス"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "arxiv>=2.1",
    "httpx>=0.27",
    "google-cloud-firestore>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
